Fix text feature alignment #4

--- a/scss/theme/_onepage.scss
+++ b/scss/theme/_onepage.scss
@@ -115,4 +115,8 @@
 .modular-text {
   padding-top: 4rem;
   padding-bottom: 4rem;
+
+  .columns.left {
+    flex-direction: row-reverse;
+  }
 }
